--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Termo • Dueto • Quarteto</title>
+  <title>Termo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>TERMO</h1>
+<header>TERMO</header>
 
 <div class="modos">
-  <button onclick="iniciarJogo(1)">Termo</button>
-  <button onclick="iniciarJogo(2)">Dueto</button>
-  <button onclick="iniciarJogo(4)">Quarteto</button>
+  <button onclick="iniciarJogo(1)">TERMO</button>
+  <button onclick="iniciarJogo(2)">DUETO</button>
+  <button onclick="iniciarJogo(4)">QUARTETO</button>
 </div>
 
-<input type="text" id="palpite" maxlength="5" placeholder="Digite uma palavra">
-<button onclick="enviar()">Enviar</button>
+<input id="palpite" maxlength="5" placeholder="PALAVRA" autofocus>
 
 <div id="jogos"></div>
 
