--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Termo</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,9 +16,11 @@
   <button onclick="iniciarJogo(4)">QUARTETO</button>
 </div>
 
-<input id="palpite" maxlength="5" placeholder="PALAVRA" autofocus>
-
 <div id="jogos"></div>
+
+<div id="teclado"></div>
+
+<div id="mensagem"></div>
 
 <script src="script.js"></script>
 </body>
